# pbi_scanner

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  bench_duckdb_cli.py  bench_native_http.py  extension_config.cmake  pyproject.toml  query_semantic_model_minimal.py  query_semantic_model_sql_minimal.py
.github/workflows/: MainDistributionPipeline.yml
docs/: release_publication.md  sx_xpress_metadata_debug_handoff.md  sx_xpress_type_handling_handoff.md  xmla_transport_performance.md
local/: README.md
scripts/: dev-win.cmd  dev-win.ps1
src/: auth.cpp  connection_string.cpp  dax_probe.cpp  dax_query.cpp  http_client.cpp  metadata_cache.cpp  pbi_scanner_extension.cpp  pbi_scanner_test_functions.cpp  powerbi_resolver.cpp  vector_writer.cpp  xmla.cpp  xmla_transport.cpp  xmla_util.cpp  xmla_value.cpp  xpress.cpp
src/include/: auth.hpp  connection_string.hpp  dax_probe.hpp  dax_query.hpp  http_client.hpp  metadata_cache.hpp  pbi_scanner_extension.hpp  pbi_scanner_test_functions.hpp  pbi_scanner_util.hpp  powerbi_resolver.hpp  vector_writer.hpp  xmla.hpp  xmla_transport.hpp  xmla_util.hpp  xmla_value.hpp  xpress.hpp
test/sql/: pbi_scanner.test
